# Queue-Research

./: .gitignore  .gitmodules  CMakeLists.txt  benchmarks.py  main  stddev.py
include/: AllocatorHooks.hpp  Benchmark.hpp
include/benchmark/: Benchmark.hpp  BenchmarkUtils.hpp  MemoryBenchmark.hpp  PairsBenchmark.hpp  ProdConsBenchmark.hpp  Stats.hpp  SymmetricBenchmark.hpp  ThreadGroup.hpp
include/queues/: FAArray.hpp  HazardPointers.hpp  LCRQ.hpp  LMTQ.hpp  LPRQ.hpp  LinkedAdapter.hpp  LinkedRingQueue.hpp  MuxQueue.hpp  QueueTypeSet.hpp  RQCell.hpp  x86Atomics.hpp
include/utils/: BenchmarkQ.hpp  Format.hpp  TemplateSet.hpp  numa_support.hpp
results/: graphs.py  memory.py
results/csv/: EnqDeqAdditional.csv  ProdCons[1:2].csv  ProdCons[2:1]Additional.csv
results_pub/csv/: EnqDeq.csv  MemoryBenchmark.csv  ProdCons[1:1].csv  ProdCons[1:1]Additional.csv  ProdCons[1:2]Additional.csv  ProdCons[2:1].csv
src/: AdditionalWork.cpp  main.cpp  pc_benchmark.cpp  queueTestCases.cpp  test.cpp
src/benchmark/: BenchmarkUtils.cpp  MemoryBenchmark.cpp  MemoryMonitor.cpp
src/test/: queueTestCases.cpp
